--- a/.gitignore
+++ b/.gitignore
@@ -2,21 +2,12 @@
 node_modules
 nodeServer/node_modules
 /dist
+nodeServer/mongo/db
 
-# local env files
-.env.local
-.env.*.local
-
-# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
 .idea
 .vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw*
+
